tratando excecao de entidade nao encontrada

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -9,6 +9,8 @@ spring:
       console:
         enabled: true
         path: /h2-console
+  jackson:
+    default-property-inclusion: non_null
   jpa:
     show-sql: true
   flyway:
